# apps/api/openapi.generated.json
@@ -3798,6 +3798,14 @@
             "in": "query",
             "name": "limit",
             "required": false
+          },
+          {
+            "schema": {
+              "type": "string"
+            },
+            "in": "query",
+            "name": "unread",
+            "required": false
           }
         ],
         "security": [
